# portaudio

./: .gitignore  LICENSE  README  README.md  portaudio.cabal
examples/: Example1.hs  Example2.hs  Example3.hs  StorableVector.hs  Transform.hs  Vector.hs  blockingPlayer.hs  callbackPlayer.hs  demo.hs  pa_devs.hs  paex_sine.hs  readme
oldsrc/Sound/PortAudio/: Base.hsc
src/Sound/: PortAudio.hs
src/Sound/PortAudio/: Base.chs  Base.hsc  Buffer.hs  Helpers.hs
