name: portaudio
version: 0.1.0
synopsis: Haskell bindings for the PortAudio library.
description: Bindings to the cross platform PortAudio library. Version 0.0.1 excludes the callback model.
category: Sound
license: OtherLicense
license-file: LICENSE
author: John Van Enk
maintainer: vanenkj@gmail.com
copyright: (c) 2008 John Van Enk
cabal-version: >= 1.2.0
build-type: Simple
stability: experimental
homepage: http://code.haskell.org/portaudio

library
  hs-source-dirs: src
  exposed-modules: Sound.PortAudio,
                   Sound.PortAudio.Base
  ghc-options: -Wall
  build-depends: base > 4,
                 containers == 0.3.*
  extra-Libraries: portaudio
